# athena-shell

./: Cargo.toml  README.md
src/: athena.rs  client.rs  config.rs  error.rs  main.rs  meta.rs  repl.rs
src/aws/: athena.rs  client.rs  config.rs  error.rs  glue.rs  mod.rs
