[package]
name = "athena-shell"
version = "0.1.0"
edition = "2024"

[dependencies]
aws-config = "1.8"
aws-runtime = "1.5"
aws-sdk-athena = "1.97"
aws-sdk-glue = "1.133.0"
aws-sdk-s3 = "1.119"
aws-smithy-types = "1.3.5"
aws-types = "1.3.11"
configparser = "3.1.0"
directories = "6.0"
inquire = "0.9.1"
thiserror = "2.0"
tokio = { version = "1.48", features = ["full"] }
